[project]
name = "laplace-pool"
version = "0.1.0"
description = "Priority-aware admission control + idle/external-tenant model reaping for a shared local LLM inference pool (LM Studio, Ollama, ...)."
authors = [{ name = "mikatachan" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []  # stdlib-only core; adapters bring their own (e.g. lms CLI)

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
